# document_processing_submission

./: .env.example  .gitignore  Dockerfile  Justfile  README.md  SYSTEM_DESIGN.md  assignment.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  evaluate.yml
docs/adr/: 001_hexagonal_architecture.md  002-007_adrs.md  002_pydantic_domain.md  003_llm_provider.md  004_state_machine.md  005_event_driven.md  006_scaling.md  007_error_handling.md  008_project_tooling.md  009_pydantic_domain_models.md  010_llm_provider_selection.md  011_api_design.md  012_evaluation_framework.md  013_cicd_pipeline.md  014_test_strategy.md  015_minio_blob_storage.md  016_circuit_breaker_resilience.md  017_logfire_observability.md  018_error_codes_rate_limiting.md  019_excel_preprocessing.md  020_multi_critic_panel.md  021_token_logprob_confidence.md  022_sentry_integration.md  023_pubsub_handling.md  024_native_llm_pdf_ingestion.md
implementation_plan/: README.md  index.md
implementation_plan/prompts/: 01_project_setup.md  02_project_scaffold.md  03_domain_models.md  04_ports_interfaces.md  05_adapters_local.md  06_adapters_production.md  07_api_endpoints.md  08_processing_graph.md  (+19 more)
infra/: main.tf  outputs.tf  variables.tf
tests/: test_adapters.py  test_adapters_mock.py  test_api.py  test_circuit_breaker.py  test_domain.py  test_edge_cases.py  test_error_handling.py  test_graph_nodes.py  test_minio_adapter.py  test_observability.py  test_ports.py  test_prometheus.py  test_self_correction.py  test_services.py  test_sqlite_adapter.py  test_validation.py
(+36 files in other folders)
