[project]
name = "doc-extract"
version = "0.1.0"
description = "Document extraction system using PydanticAI and Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pydantic-ai>=0.0.20",
    "pydantic-graph>=0.0.20",
    "loguru>=0.7.3",
    "stamina>=24.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "minio>=7.2.0",
    "logfire>=2.0.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.122.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
editable = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
